--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,11 @@ under the License.
 			<artifactId>log4j-1.2-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>edu.illinois</groupId>
+			<artifactId>ctest4j-junit5</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<!-- this section defines the module versions that are used if nothing else is specified. -->
