--- a/pom.xml
+++ b/pom.xml
@@ -923,6 +923,11 @@ under the License.
 				<version>${mockito.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>edu.illinois</groupId>
+				<artifactId>ctest4j-junit5</artifactId>
+				<version>1.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -1761,6 +1766,11 @@ under the License.
 					</systemPropertyVariables>
 					<!-- This is picked up by IntelliJ -->
 					<argLine>${flink.surefire.baseArgLine}</argLine>
+					<argLine>
+						-javaagent:/Users/lithe/Downloads/aspectjweaver-1.9.7.M2.jar
+					</argLine>
+					<reuseForks>false</reuseForks>
+					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 				<executions>
 					<!--execute all the unit tests-->
