--- a/flink-metrics/pom.xml
+++ b/flink-metrics/pom.xml
@@ -64,6 +64,27 @@ under the License.
 			<artifactId>jsr305</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>edu.illinois</groupId>
+			<artifactId>ctest4j-junit5</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- Other plugins -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M9</version>
+				<configuration>
+					<outputDirectory>${project.build.directory}/site/surefire-report</outputDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
