--- a/flink-datastream/pom.xml
+++ b/flink-datastream/pom.xml
@@ -79,5 +79,10 @@ under the License.
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>edu.illinois</groupId>
+			<artifactId>ctest4j-junit5</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
