--- a/flink-docs/pom.xml
+++ b/flink-docs/pom.xml
@@ -197,6 +197,11 @@ under the License.
 			<version>1.15.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>edu.illinois</groupId>
+			<artifactId>ctest4j-junit5</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
