--- a/flink-filesystems/pom.xml
+++ b/flink-filesystems/pom.xml
@@ -136,9 +136,9 @@ under the License.
 					</systemPropertyVariables>
 					<!-- This is picked up by IntelliJ -->
 					<argLine>${flink.surefire.baseArgLine}</argLine>
-					<argLine>
-						-javaagent:/Users/lithe/Downloads/aspectjweaver-1.9.7.M2.jar
-					</argLine>
+<!--					<argLine>-->
+<!--						-javaagent:/Users/lithe/Downloads/aspectjweaver-1.9.7.M2.jar-->
+<!--					</argLine>-->
 					<reuseForks>false</reuseForks>
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
